fixed overflow issues and restyled main page spacing

--- a/src/components/ProjectCard/ProjectCard.css
+++ b/src/components/ProjectCard/ProjectCard.css
@@ -1,10 +1,10 @@
 .card-container {
     display: flex;
     flex-direction: column;
-    width: 65vw;
-    height: 90vh;
+    width: 55vw;
+    height: fit-content;
     /* padding: 10vh 0; */
-    gap: 5vh;
+    gap: 24px;
     /* justify-content: space-between; */
     /* align-items: ; */
     /* flex-shrink: 0;     */
