--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+html {
+  overflow: hidden;
+}
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -21,6 +25,7 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
+  overflow: hidden;
 }
 
 h1 {
