--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -20,7 +20,7 @@ body, html {
 .project-card-container {
   display: flex;
   flex-direction: column;
-  gap: 30vh;
+  gap: 128px;
 }
 
 @media only screen and (max-width: 1025px) {
@@ -61,7 +61,7 @@ body, html {
   align-items: center;
   gap: 72px;
   max-width: 700px;
-  padding: 0 5vw;
+  padding: 0 4vw;
   height: 100vw;
   transition: width 0.5s ease, height 0.5s ease, top 0.5s ease; /* Add transition for top */
 }
@@ -107,7 +107,7 @@ align-self: stretch;
   opacity: 0;
   padding: 20px;
   padding-top: 25vh;
-  width: 100%;
+  width: fit-content;
   min-height: 100vh;
   transition: width 0.5s ease, height 0.5s ease opacity 0.2s ease-in;  
 }
